# RedHatLDAP-MCP

./: .gitignore  .license-header.txt  .pre-commit-config.yaml  .secrets.baseline  CLAUDE_INTEGRATION.md  FOUNDATION_TEST_RESULTS.md  README.md  TEST_FRAMEWORK_SUMMARY.md  pyproject.toml  test_foundation.py
.github/workflows/: lint.yml  tests.yml
config/: redhat-ldap.json
scripts/: run_mcp_server.sh
src/redhat_ldap_mcp/: __init__.py  server.py  server_http.py
src/redhat_ldap_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/redhat_ldap_mcp/config/: __init__.py  loader.py  models.py
src/redhat_ldap_mcp/core/: __init__.py  ldap_connector.py  logging.py
src/redhat_ldap_mcp/tools/: __init__.py  groups.py  locations.py  organization.py  people_search.py
tests/: __init__.py  test_config.py  test_integration_redhat_ldap.py  test_ldap_connector.py  test_logging.py  test_mcp_protocol.py  test_mcp_server.py
