[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redhat-ldap-mcp"
version = "0.1.0"
description = "A specialized Model Context Protocol server for corporate LDAP directories"
requires-python = ">=3.10"
authors = [
    {name = "James Laska", email = "jlaska@redhat.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ldap", "mcp", "corporate-directory", "redhat", "openldap", "directory-services"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking :: Authentication",
    "Topic :: Office/Business :: Groupware",
]

dependencies = [
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git",
    "ldap3>=2.9.1,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "fastmcp>=0.2.0",
    "asgiref>=3.7.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "black>=23.0.0,<24.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "ruff>=0.1.0,<0.2.0",
    "types-requests>=2.31.0,<3.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/jlaska/RedHatLDAP-MCP"
Documentation = "https://github.com/jlaska/RedHatLDAP-MCP#readme"
Repository = "https://github.com/jlaska/RedHatLDAP-MCP.git"
Issues = "https://github.com/jlaska/RedHatLDAP-MCP/issues"

[project.scripts]
redhat-ldap-mcp = "redhat_ldap_mcp.server:main"
redhat-ldap-mcp-http = "redhat_ldap_mcp.server_http:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
filterwarnings = [
    "ignore::DeprecationWarning:pyasn1.*",
    "ignore::DeprecationWarning:ldap3.*",
    "ignore::UserWarning:pydantic.*",
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']
